tests/snapshot/error/source_locations/destructure/object/empty_to_object.exp
TypeError: null has no properties
  ┌ source_locations/destructure/object/empty_to_object.js:1:5
  |
1 | var {} = null;
  |     ^
Stack trace:
  at <global> (source_locations/destructure/object/empty_to_object.js:1:5)